# AlgoPack

./: CMakeLists.txt  main.cpp
tests/: test_bst.cpp  test_linkedlist.cpp
